--- a/prophete/core/templates/home.html
+++ b/prophete/core/templates/home.html
@@ -1,1 +1,6 @@
-Hello!
+{% extends 'base.html' %}
+{% load staticfiles %}
+
+{% block content %}
+  <h1 class="cover-heading">Hello.</h1>
+{% endblock %}
