--- a/prophete/core/templates/base.html
+++ b/prophete/core/templates/base.html
@@ -15,7 +15,7 @@
     <link href="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <link rel="stylesheet" href="{% static 'core/css/style.css' %}" type="text/css">
+    <link rel="stylesheet" href="{% static 'core/css/core.css' %}" type="text/css">
   </head>
 
   <body>
