--- a/prophete/core/static/core/css/core.css
+++ b/prophete/core/static/core/css/core.css
@@ -1,3 +1,21 @@
-#main-contenter {
-  margin-top: 100px;
+html {
+  position: relative;
+  min-height: 100%;
+}
+
+body {
+  margin-bottom: 60px;
+}
+
+.footer.sticky-bottom {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 15px;
+  line-height: 15px;
+  background-color: #f5f5f5;
+}
+
+#main-container {
+  margin-top: 80px;
 }
