--- a/prophete/core/templates/base.html
+++ b/prophete/core/templates/base.html
@@ -20,15 +20,16 @@
 
   <body>
 
-    <nav class="navbar navbar-toggleable-md navbar-light bg-faded fixed-top">
+    <nav class="navbar navbar-toggleable-md navbar-inverse bg-primary bg-faded">
       <button class="navbar-toggler navbar-toggler-right" type="button"
               data-toggle="collapse" data-target="#navbarSupportedContent"
               aria-controls="navbarSupportedContent" aria-expanded="false"
               aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <a class="navbar-brand" href="{% url 'home' %}">{% trans 'Prophète' %}</a>
-
+      <a class="navbar-brand mr-5" href="{% url 'home' %}">
+        {% trans 'Prophète' %}
+      </a>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item active">
@@ -36,15 +37,25 @@
               {% trans 'Home' %} <span class="sr-only">(current)</span>
             </a>
           </li>
+          <li class="nav-item disabled">
+            <a class="nav-link" href="#">
+              {% trans 'Forecast' %} <span class="sr-only">(current)</span>
+            </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">
+              {% trans 'About' %} <span class="sr-only">(current)</span>
+            </a>
+          </li>
         </ul>
       </div>
     </nav>
 
-    <div class="container" id="main-contenter">{% block content %}{% endblock %}</div>
+    <div id="main-container">{% block content %}{% endblock %}</div>
 
-    <footer class="footer">
-      <nav class="navbar fixed-bottom navbar-light bg-faded text-center">
-        <p class="text-muted">
+    <footer class="footer sticky-bottom">
+      <nav class="navbar navbar-light bg-faded text-center">
+        <p class="text-muted mt-3">
           {% trans 'Prophète project, by' %} <a href="https://github.com/bonidjukic" target="_blank">bonidjukic</a>.
         </p>
       </nav>
@@ -53,12 +64,12 @@
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
-    <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js"
-            integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n"
-            crossorigin="anonymous"></script>
-    <script>window.jQuery || document.write('<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"><\/script>')</script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb"
-            crossorigin="anonymous"></script>
-    <script src="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-alpha.6/js/bootstrap.min.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js"></script>
+    <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="{% static 'core/js/core.js' %}"></script>
+
+    {% block extra_js %}{% endblock %}
+
   </body>
 </html>
